--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,107 @@
-baseURL: http://example.org/
 languageCode: en-us
-title: My New Hugo Site
+baseURL: "https://sindrekjelsrud.github.io/"
+title: Sindre's Website
+theme: PaperMod
+
+enableInlineShortcodes: true
+enableMoji: true # allowing using emoji
+enableRobotsTXT: true
+
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+
+#googleAnalytics: UA-123-45
+
+paginate: 5 # articles per page
+
+minify:
+  disableXML: true
+  # minifyOutput: true
+
+params:
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: Sindre Kjelsrud
+  description: "Student"
+  author: Sindre # author: ["Me", "You"] # multiple authors
+  images: ["<link or path of image for opengraph, twitter-cards>"]
+
+  DateFormat: "January 2, 2006"
+  defaultTheme: auto # dark, light
+  disableThemeToggle: false
+  ShowReadingTime: true
+  ShowShareButtons: false
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: false
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+
+  label:
+    text: "Home"
+
+  # profile-mode
+  profileMode:
+    enabled: true # needs to be explicitly set
+    title: "Sindre Kjelsrud"
+    subtitle: "Student at Western University of Applied Sciences"
+    imageUrl: "img/me-myself-and-i.png"
+    imageTitle: "Me, Myself and I"
+    imageWidth: 150
+    imageHeight: 150
+    buttons:
+      - name: Projects
+        url: projects
+      - name: Resume
+        url: resume.pdf
+
+  # home-info mode
+  homeInfoParams:
+    Title: "Welcome! 🚀"
+    Content: "My name is Sindre Kjelsrud, and I'm an IT-Student at Western University of Applied Sciences."
+
+  socialIcons:
+    - name: linkedin
+      url: "https://www.linkedin.com/in/sindre-kjelsrud-345583218/"
+    - name: github
+      url: "https://github.com/SindreKjelsrud"
+    - name: instagram
+      url: "https://instagram.com/SindreKjelsrud"
+
+  # for search
+  # https://fusejs.io/api/options.html
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
+menu:
+  main:
+    - identifier: about
+      name: About
+      url: /about/
+      weight: 1
+    - identifier: projects
+      name: Projects
+      url: /projects/
+      weight: 2
+    - identifier: resume
+      name: Resume
+      url: /resume.pdf/
+      weight: 3
+    - identifier: blog
+      name: Blog
+      url: /blog-posts/
+      weight: 4
+    #- identifier: example
+    #  name: example.org
+    #  url: https://example.org
+    #  weight: 30
