Feature: added favicon + new colors on menu-buttons

--- a/config.yml
+++ b/config.yml
@@ -45,6 +45,9 @@ params:
   label:
     text: "Home"
 
+  assets:
+    favicon: "img/cat.png"
+
   # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
