chore: edited author-tag & added tags-page

--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,7 @@ params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: Sindre Kjelsrud
   description: "Student"
-  author: Sindre # author: ["Me", "You"] # multiple authors
+  author: Sindre Kjelsrud # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
 
   DateFormat: "January 2, 2006"
@@ -93,32 +93,35 @@ params:
 menu:
   main:
     - identifier: about
-      name: About
+      name: about
       url: /about/
       weight: 1
     - identifier: projects
-      name: Projects
+      name: projects
       url: /projects/
       weight: 2
     - identifier: resume
-      name: Resume
+      name: resume
       url: /en_resume/
       weight: 3
     - identifier: blog
-      name: Blog
+      name: blog
       url: /blog-posts/
       weight: 4
+    - identifier: tags
+      name: tags
+      url: /tags/
+      weight: 5
     #- identifier: example
     #  name: example.org
     #  url: https://example.org
     #  weight: 30
-
 #########################################################################
 
 #⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠤⠒⠒⠒⠒⠒⠤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 #⠀⠀⠀⠀⢀⡲⢋⠝⠋⣛⣳⡄⠀⠀⠀⠀⠀⠀⠉⠓⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀
 #⠀⢀⠠⣴⠗⢀⠥⠂⢁⠤⠤⠤⠁⠀⠀⠀⠀⠀⠀⠀⠀⣛⠛⠉⠗⠒⠲⢤⣀⠀
-#⠰⠃⠐⠀⠋⡠⠀⠮⠤⠤⠤⠤⡤⡄⠀⠀⠀⠀⠀⠀⢠⣽⠄⠀⠀⠀⠀⠀⢸⡆            __       __ 
+#⠰⠃⠐⠀⠋⡠⠀⠮⠤⠤⠤⠤⡤⡄⠀⠀⠀⠀⠀⠀⢠⣽⠄⠀⠀⠀⠀⠀⢸⡆            __       __
 #⠀⠜⠀⠀⠈⠀⢠⣤⣔⣒⡒⠒⠂⠁⠀⡀⢀⣀⣤⣶⣿⡟⠀⠀⠀⠀⠀⢀⡼⠀           |  \     |  \
 #⠈⠀⠀⠀⠀⣰⡿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠟⠉⠁⠀⠀⠀⢄⡴⠋⠀⠀   _______ \▓▓ ____| ▓▓
 #⠀⠀⠀⠀⣰⠋⠀⠀⠀⠈⠙⠛⠛⠛⠛⠋⠉⠀⠀⠀⠀⢀⣠⣴⡊⠁⠀⠀⠀⠀   /       \  \/      ▓▓
